<resources>
    <string name="afttopinst">* Please select Country, Currency, and Language below.\n\nNOTE:\nThese settings can also be accessed using the globe and settings icon on the app home page.</string>
    <string name="aftinstruc">*Local - Selected country currency.</string>
    <string name="aftinstruc2">*USD - United States Dollar</string>
    <string name="maintopinst">Please select your network operator, fill in your recharge/bill amount, and fill in your phone number.</string>
    <string name="settingstop">Please edit your email address, country, and currency.\nNOTE: Transaction reports will be sent to the email below.</string>
    <string name="discountdetail4">1. Transaction reports will be sent to this email address.</string>
    <string name="discountdetail5">2. You can change this email anytime using the globe (settings) icon in the app.</string>
    <string name="phoneformat">Processed Phone Number:\u0020</string>
    <string name="valueformat">Processed Value:\u0020</string>
    <string name="mainfootmsg">Phone number format: Country code &#8211; Number. Typical format is 1&#8211;314&#8211;517&#8211;1234 (USA), 44&#8211;797&#8211;430&#8211;1234 (UK), 234&#8211;802&#8211;767&#8211;1234 (NIGERIA)</string>
    <string name="vemail">Email</string>
    <string name="settings">Settings</string>
    <string name="setsaved">Settings saved.</string>
    <string name="save">Save</string>
    <string name="cemail">Change your email</string>
    <string name="topup3">TOP-UP AMOUNT:\u0020</string>
    <string name="pinfomsg">*Please check your airtime balance after payment.</string>
    <string name="pinfomsgemail">*Email support@quickairtime.com for all enquiries.</string>
    <string name="pending">Pending</string>
    <string name="inappbrowser">Webpay</string>
    <string name="top">Top</string>
    <string name="firstuse">Configuring app for first time use. Please wait....</string>
    <string name="firstusetitle">App Configuration</string>
    <string name="pingtitle">Processing</string>
    <string name="ping">Please wait....</string>
    <string name="proceed">Proceed</string>
    <string name="payment">Payment Report:\u0020</string>
    <string name="paymentgate">Payment Gateway:\u0020</string>
    <string name="topup4">Topup Report:\u0020</string>
    <string name="countryish">The app is being configured for the chosen country. Please wait....</string>
    <string name="apierror">Oops sorry, the topup request cannot be executed at this time. Please try again, thank you.</string>
    <string name="chooseCountryLang">Please choose a country.</string>
    <string name="chooseCurr">Please select a currency.</string>
    <string name="chooseCurrency">Choose Currency</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="star">*</string>
    <string name="memail">Merchant Email</string>
    <string name="passw">Merchant Password</string>
    <string name="paypal">Service by Paypal</string>
    <string name="visa">Service by Authorize.net</string>
    <string name="mastercard">Service by Authorize.net</string>
    <string name="google">Service by Google Inc.</string>
    <string name="giftcode">Service by Giftcodex.com</string>
    <string name="stanbic">Service by Stanbic IBTC bank</string>
    <string name="etranzact">Service by Etranzact limited</string>
    <string name="discover">Service by Authorize.net</string>
    <string name="amazon">Service by Amazon</string>
    <string name="interswitch">Service by Interswitch Limited</string>
    <string name="verifiedvisa">Service by Unified Payments Services Limited</string>
    <string name="coremobile">Service by Coremobile Merchant Group</string>
    <string name="andpowered">\u0020and powered by Coremobile LLC USA.</string>
    <string name="payinstr">* Please select a payment gateway below to proceed</string>
    <string name="payinfoinstr">* Please proceed by clicking the "Pay" button below.</string>
    <string name="initchat">"Couldn't initiate chat, would you like to restart chat session?"</string>
    <string name="chatmsgnah">Oops sorry, message could not be sent would you like to try again?</string>
    <string name="chatoff">"Chat session is currently off, would you like to restart?"</string>
    <string name="canceltrans">Are you sure you want to close the payment window?</string>
    <string name="countnotsupp">Oops sorry, the chosen country is not yet supported. Please select another country.</string>
    <string name="gatewayready">Oops sorry this gateway is not yet configured to process payment. Your app will be updated automatically when it becomes available.</string>
    <string name="discountcodetitle">Please fill in the following details to finish setting up your mobile application.\n\nNOTE:\n1.Transaction Reports will be sent to this email address.\n2.You can change this email anytime using the globe and settings icon on the apps</string>
    <string name="p1">PAYMENT AUTHORIZED</string>
    <string name="p2">PAYMENT DECLINED DUE TO INABILITY TO CONTACT AUTHORIZING BANK</string>
    <string name="p3">PAYMENT DECLINED DUE TO INSUFFICIENT FUNDS IN USER ACCOUNT</string>
    <string name="p4">PAYMENT PROCESS TERMINATED DUE TO TIME OUT</string>
    <string name="p5">PAYMENT DECLINED DUE TO INABILITY TO CONTACT PAYMENT GATEWAY</string>
    <string name="p6">NETWORK OPERATOR INVALID</string>
    <string name="t1">TOPUP DELIVERY CONFIRMED</string>
    <string name="t2">NO FEEDBACK FROM TOPUP ACTION</string>
    <string name="t3">TOPUP FAILED</string>
    <string name="transview">Transaction View</string>
    <string name="checkstat">Checking transaction status, please wait....</string>
    <string name="quickmerchantnarr">Please enter your details below to  pay with your Quick Airtime Merchant Wallet.\nLog on to www.quickairtime.com/merchants to create a merchant account  and become a reseller immediately.</string>
    <string name="transreport">Transaction Report:\u0020</string>
    <string name="unsuccess">Unsuccessful</string>
    <string name="internetish">Oops, seems there is no internet connection on your device, please reconnect and try again.</string>
    <string name="exit">Exit</string>
    <string name="transid">Trans. ID:\u0020</string>
    <string name="transid2">TRANS. ID:\u0020</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="emailcap">EMAIL:\u0020</string>
    <string name="query">Query</string>
    <string name="app_name">Quick AirTime</string>
    <string name="mainone">Telecoms Billing and Mobile Recharge</string>
    <string name="delete">Delete</string>
    <string name="amtcharged">AMOUNT CHARGED:\u0020</string>
    <string name="phonerece">YOUR PHONE WILL RECEIVE:\u0020</string>
    <string name="plsnoteprice">***Please note our prices vary with currency exchange rates.</string>
    <string name="alsodiscount">Also, discounts are only guaranteed for selected network operators.</string>
    <string name="continua">Continue</string>
    <string name="deleteall">Delete All</string>
    <string name="discountcode">Discount Code</string>
    <string name="typecountry">Type to search for country</string>
    <string name="discountdetail">* Discount codes are only applicable to reward programmes.</string>
    <string name="discountdetail2">* Please proceed using continue If you do not have a discount code.</string>
    <string name="gatewayminerror">This payment option has a minimum transaction limit of\u0020</string>
    <string name="amountmultiple">Amount entered must be in multiples of\u0020</string>
    <string name="send">Send</string>
    <string name="img1Desc">Core AirTime</string>
    <string name="empty"></string>
    <string name="about">About Us</string>
    <string name="viewHis">View History</string>
    <string name="phonehint">Phone Number (08022222222)</string>
    <string name="emailhint">Email address</string>
    <string name="top1">Please enter a valid Transaction ID associated with this mobile app to chat with our customer service experts.</string>
    <string name="top2">PLEASE NOTE: Our customer service team will only respond to a valid Transaction Identification Number</string>
    <string name="livechat">Live Chat</string>
    <string name="topup2">Top-Up</string>
    <string name="transIdNum">Transaction ID Number</string>
    <string name="hintmessage">Enter Message Here</string>
    <string name="open">Start</string>
    <string name="liveLabel">Live Support</string>
    <string name="tryag">Try Again</string>
    <string name="transExist">Sorry transaction number entered does not exist.</string>
    <string name="vcountries">Countries</string>
    <string name="vlang">Languages</string>
    <string name="vcurrency">Currency</string>
    <string name="welcome">Welcome</string>
    <string name="vpay">Pay</string>
    <string name="success">Successful</string>
    <string name="plsChoosePref">Please Choose Preferences</string>
    <string name="iAgree">I agree to the\u0020</string>
    <string name="tandC">Terms and Conditions\u0020</string>
    <string name="ofQuiA">of QuickAirTime.</string>
    <string name="enter">Enter</string>
    <string name="copyrightFoot">Copyright © 2013 www.quickairtime.com. All rights reserved.</string>
    <string name="chooseCountry">Choose Country</string>
    <string name="tranHis">Transaction History</string>
    <string name="chooseLang">Choose Language</string>
    <string name="paywith">Value In</string>
    <string name="payConfirm">Payment Confirmation</string>
    <string name="topup">Phone Number:\u0020</string>
    <string name="amount">Amount:\u0020</string>
    <string name="network">Operator:\u0020</string>
    <string name="tranid">Transaction ID:\u0020</string>
    <string name="contactus">Contact us: airtime@mycoremobile.com</string>
    <string name="ofpurchase">of this purchase.</string>
    <string name="paybyclick">By clicking the payment type below, I agree to the\u0020</string>
    <string name="date">Date:\u0020</string>
    <string name="time">Time:\u0020</string>
    <string name="tranReport">Transaction Report</string>
    <string name="retry">Retry</string>
    <string name="sametran">Same Transaction</string>
    <string name="newtran">New Transaction</string>
    <string name="phonenum">Phone Number:\u0020</string>
    <string name="email">Email:\u0020</string>
    <string name="dateTime">Date/Time:\u0020</string>
    <string name="goback">Go Back</string>
    <string name="reload">Reload</string>
    <string name="historyItem">History Item</string>
    <string name="chooseValidNetwork">Please choose a valid network operator.</string>
    <string name="chooseValidEmail">Please enter a valid email address.</string>
    <string name="enterMinMax">Please enter a valid amount within the min-max range.</string>
    <string name="validPhoneNetwork">Please enter a valid phone number for the chosen network.</string>
    <string name="enterValidPhone">Please enter a valid phone number.</string>
    <string name="agreeTandC">You have to agree to the terms and conditions before proceeding.</string>
    <string name="delAllHistory">Are you sure you want to delete all history items?</string>
    <string name="selectPrefOpt">Please select preferred option below:</string>
    <string name="noTrans">No Transaction has been carried out on device.</string>
    <string name="errorTitle">Error</string>
    <string name="delTitle">Delete</string>
    <string name="delItem">Are you sure you want to delete this item?</string>
    <string name="menuTitle">Menu</string>
    <string name="viw">View</string>
    <string name="selectCountry">Select Country</string>
    <string name="netOperator">Network Operator</string>
    <string name="ok">OK</string>
</resources>