<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	android:id="@+id/widget41"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#ffffff"
	xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
	android:id="@+id/widget83"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">
<TextView
	android:id="@+id/widget84"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/cemail"
	android:textSize="18sp"
	android:textStyle="bold"
	android:textColor="#000000"
	android:layout_gravity="center_horizontal" />
</LinearLayout>
<EditText
	android:id="@+id/txtEmail"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:singleLine="true"
	android:inputType="textEmailAddress"
	android:layout_marginTop="20dp"
	android:hint="@string/emailhint"
	android:layout_gravity="center_horizontal" />
<TextView
	android:id="@+id/lblErrMessage"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/chooseValidEmail"
	android:textSize="16sp"
	android:textStyle="bold"
	android:textColor="#FF0000"
	android:padding="5dp"
	android:visibility="gone"
	android:layout_gravity="center_horizontal" />
<Button
	android:id="@+id/cmdOk"
	android:layout_width="100dp"
	android:layout_height="wrap_content"
	android:text="@string/ok"/>
</TableLayout>
