<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/widget41"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#33FF66"
	xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView android:id="@+id/scrollView2" android:layout_width="fill_parent" android:layout_height="fill_parent" 
    android:layout_alignParentTop="true" android:layout_above="@+id/layfoot">
<LinearLayout
	android:id="@+id/widget8334"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout
	android:id="@+id/widget39"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="20dp"
	android:background="#ffffff" 
	>
<ImageView
	android:id="@+id/imgLogo"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:contentDescription="@string/empty"
	android:layout_gravity="center"
	android:src="@drawable/header" />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget83"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="#00CC00"
	android:orientation="vertical">
<TextView
	android:id="@+id/widget84"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/payConfirm"
	android:textSize="16sp"
	android:layout_marginTop="5dp"
	android:textStyle="bold"
	android:textColor="#ffffff"
	android:paddingLeft="5dp" />
<TextView
	android:id="@+id/widget8456"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/quickmerchantnarr"
	android:textSize="14sp"
	android:autoLink="web"
	android:textColor="#ffffff"
	android:padding="5dp"
	android:layout_marginBottom="5dp" />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget5haj0"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="10dp"
	android:layout_gravity="center_horizontal" 
	android:orientation="horizontal">
<ImageView
	android:id="@+id/imgPaymentGateway"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:contentDescription="@string/empty" 
	android:src="@drawable/empty_selector"
    android:background="@android:color/transparent"
	/>
</LinearLayout>
<LinearLayout
	android:id="@+id/widget5haj0213"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="10dp" android:layout_gravity="center_horizontal"
	android:orientation="horizontal">
<TextView
	android:id="@+id/lblServiceby"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/visa"
	android:textColor="#000000" />
</LinearLayout>
<EditText
	android:id="@+id/txtEmail"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:singleLine="true"
	android:inputType="textEmailAddress"
	android:layout_marginTop="10dp"
	android:padding="10dp"
	android:hint="@string/memail"
	android:layout_gravity="center_horizontal" />

<EditText
	android:id="@+id/txtPassword"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:singleLine="true"
	android:inputType="textPassword"
	android:layout_marginTop="20dp"
	android:padding="10dp"
	android:hint="@string/passw"
	android:layout_gravity="center_horizontal" />

<TextView
	android:id="@+id/widget62"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/pinfomsg"
	android:layout_gravity="left"
	android:paddingLeft="10dp"
	android:textColor="#FF0000"/>
<TextView
	android:id="@+id/txtTerms2"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/pinfomsgemail"
	android:layout_gravity="left"
	android:paddingLeft="10dp"
	android:autoLink="email"
	android:textColor="#FF0000" />

<LinearLayout
	android:id="@+id/widget83ab"
	android:layout_width="wrap_content" android:layout_marginRight="10dp"
	android:layout_height="wrap_content" android:layout_marginTop="10dp"
	android:layout_marginBottom="5dp"
	android:orientation="vertical" android:layout_gravity="right">
<Button
	android:id="@+id/cmdEnter"
	android:layout_width="100dp"
	android:layout_height="50dp"
	android:textColor="#ffffff"
	android:background="#00CC00"
	android:text="@string/vpay"/>
</LinearLayout>
</LinearLayout>
</ScrollView>
<RelativeLayout
	android:id="@+id/layfoot"
	android:layout_width="fill_parent"
	android:layout_height="50dp"
	android:orientation="horizontal"
	android:layout_alignParentBottom="true"
	android:background="#ffffff"
	>
<ImageView
    android:id="@+id/imgFoot"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_alignParentRight="true"
    android:contentDescription="@string/empty"
    android:layout_marginRight="10dp"
    android:src="@drawable/footer" />
</RelativeLayout>
</RelativeLayout>
