<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	android:id="@+id/widget41"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#ffffff"
	android:padding="5dp"
	xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
	android:id="@+id/widgetgyg"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>
	<com.core.airtime.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
<LinearLayout
	android:id="@+id/widget42hjhjh"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<LinearLayout
	android:id="@+id/widget39"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="20dp"
	android:background="#ffffff" 
	>
<ImageView
	android:id="@+id/imgLogo"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:contentDescription="@string/empty"
	android:layout_gravity="center"
	android:src="@drawable/header" />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget42"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="10dp"
	android:orientation="vertical" android:background="#00CC00">
<TextView
	android:id="@+id/widget43"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/liveLabel"
	android:textSize="16sp"
	android:textColor="#ffffff" />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget42huy"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
<TextView
	android:id="@+id/lblhcxjhjxc"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/top1" android:layout_marginTop="5dp"
	android:textSize="14sp" android:paddingLeft="5dp"
	android:textColor="#FF0000"
	/>
</LinearLayout>
<RelativeLayout
	android:id="@+id/widget4232"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="#F0F0F0"
	android:orientation="vertical" android:layout_marginTop="5dp">
<EditText
	android:id="@+id/txtTransID"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:hint="@string/transIdNum"
	android:textSize="18sp" android:layout_toLeftOf="@+id/cmdOpen"
	android:layout_alignParentLeft="true"
	android:singleLine="true"/>
<Button
	android:id="@+id/cmdOpen"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:textColor="#ffffff"
	android:text="@string/query" android:layout_alignParentRight="true"
	android:background="#00CC00"
	android:padding="10dp"
	android:layout_marginLeft="10dp"
	/>
</RelativeLayout>
</LinearLayout>

<LinearLayout
	android:id="@+id/widget4212"
	android:layout_width="fill_parent" android:layout_above="@+id/widget42hjhxhk" 
	android:baselineAligned="false"
	android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_below="@+id/widget42hjhjh" 
	android:orientation="horizontal" android:layout_marginTop="5dp">
    <ListView android:id="@+id/in"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_weight="1"
        >
    </ListView>
</LinearLayout>

<LinearLayout
	android:id="@+id/widget42hjhxhk"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:layout_marginTop="5dp"
	android:orientation="vertical" android:layout_alignParentBottom="true">
<RelativeLayout
	android:id="@+id/widge657787hk"
	android:layout_width="fill_parent"
	android:background="#F0F0F0"
	android:layout_height="wrap_content" android:layout_marginTop="5dp"
	android:orientation="horizontal">
<EditText
	android:id="@+id/txtMessage"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="14sp"
	android:hint="@string/hintmessage"
	android:layout_marginRight="5dp"
	android:maxLength="160"
	android:layout_alignParentLeft="true"
	android:layout_toLeftOf="@+id/cmdSend"
	android:enabled="false"/>
<Button
	android:id="@+id/cmdSend"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:textColor="#ffffff"
	android:text="@string/send" android:layout_alignParentRight="true"
	android:background="#00CC00"
	android:padding="10dp"
	android:layout_marginLeft="5dp"
	/>
</RelativeLayout>

<RelativeLayout
    android:id="@+id/widget39rere"
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_weight="0.01"
    android:background="#ffffff"
    android:orientation="horizontal" >

<ImageView
	android:id="@+id/imgMenu"
	android:layout_width="wrap_content"
	android:layout_height="20dp"
	android:contentDescription="@string/empty"
	android:layout_alignParentLeft="true"
	android:clickable="true"
	android:layout_marginLeft="10dp"
	android:layout_marginRight="100dp"
	android:src="@drawable/menu_selector" />

<ImageView
    android:id="@+id/imgFoot"
    android:layout_width="200dp"
    android:layout_height="20dp"
    android:layout_alignParentRight="true"
    android:layout_toRightOf="@+id/imgMenu"
    android:contentDescription="@string/empty"
    android:src="@drawable/footer" />

</RelativeLayout>
</LinearLayout>
</RelativeLayout>
</TableLayout>